Resolve "Redundant Connection" problem